[package]
name = "thread-local-accesserror-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.26", default_features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "registry",
] }
